# tiles-3d-rs

./: .gitignore  Cargo.toml  README.md  package.json
.cargo/: config.toml
src/: camera.rs  lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader-challenge.wgsl  shader.wgsl  texture.rs
www/: package.json  webpack.config.js
www/src/: index.js
www/src/css/: styles.css
